--- a/src/components/category-item/category-item.style.scss
+++ b/src/components/category-item/category-item.style.scss
@@ -1,17 +1,3 @@
-.homepage{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-}
-
-.categories{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .category-item{
     min-width: 30%;
     height: 240px;
@@ -21,12 +7,40 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+
+    &.large{
+        height: 340px;
+    }
+
     &:first-child{
         margin-right: 7.5px;
     }
 
     &:last-child{
         margin-left: 7.5px;
+    }
+
+    &:hover{
+        cursor: pointer;
+        
+        & .background-image{
+            transform: scale(1.1);
+            transition: transform 5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+        }
+
+        & .content{
+            opacity: 0.9;
+        }
+    }
+
+    .background-image{
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
     }
 
     .category-content{
@@ -37,6 +51,9 @@
         align-items: center;
         justify-content: center;
         border: 1px solid black;
+        background-color: white;
+        opacity: 0.7;
+        position: absolute;
     }
 
     .title{
