--- a/src/components/category-item/category-item.style.scss
+++ b/src/components/category-item/category-item.style.scss
@@ -5,7 +5,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
     margin: 0 7.5px 15px;
     background-position: center;
     background-size: cover;
@@ -28,10 +27,11 @@
         
         & .background-image{
             transform: scale(1.1);
-            transition: transform 5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+            opacity: 0.8;
+            transition: transform 5s cubic-bezier(0.25, 0.45, 0.45, 0.95), opacity 0.5s linear;
         }
 
-        & .content{
+        & .category-content{
             opacity: 0.9;
         }
     }
@@ -50,7 +50,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        border: 1px solid black;
         background-color: white;
         opacity: 0.7;
         position: absolute;
