--- a/src/components/custom-button/custom-button.style.scss
+++ b/src/components/custom-button/custom-button.style.scss
@@ -13,7 +13,7 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
-
+    transition: all 0.3s ease-out;
     &:hover {
         background-color: white;
         color: black;
