--- a/src/components/custom-button/custom-button.style.scss
+++ b/src/components/custom-button/custom-button.style.scss
@@ -30,4 +30,14 @@
             border: 1px solid #4285f4;
         }
     }
+
+    &.inverted {
+        background-color: white;
+        color: black;
+
+        &:hover{
+            background-color: black;
+            color:white;
+        }
+    }
 }
