--- a/src/components/collection-item/collection-item.style.scss
+++ b/src/components/collection-item/collection-item.style.scss
@@ -1,16 +1,15 @@
 .collection-item {
-    width: 22%;
+    width: 22vw;
     display: flex;
     flex-direction: column;
     height: 350px;
     align-items: center;
     position: relative;
 
+
     .image {
       width: 100%;  
       height: 95%;
-      background-size: cover;
-      background-position: center;
       margin-bottom: 5px;
       opacity: 1;
       transition: opacity 0.5s ease-out;
