--- a/src/pages/checkout/checkout.style.scss
+++ b/src/pages/checkout/checkout.style.scss
@@ -28,4 +28,13 @@
       margin-left: auto;
       font-size: 36px;
     }
+
+    .test-warning{
+      text-align: center;
+      margin: 40px 0;
+      font-size: 20px;
+      color: red;
+      line-height: 32px;
+      opacity: 0.8;
+    }
   }
