--- a/client/src/components/authentication/authentication.style.scss
+++ b/client/src/components/authentication/authentication.style.scss
@@ -2,4 +2,11 @@
     padding: 18px 0;
     display: flex;
     justify-content: space-evenly;
+    @media screen and (max-width: 800px){
+        flex-direction: column;
+        align-items: center;
+        :first-child{
+            margin-bottom: 20px;
+        }
+    }
 }
