--- a/client/src/pages/collection/collection-page.style.scss
+++ b/client/src/pages/collection/collection-page.style.scss
@@ -1,18 +1,22 @@
-.collection-page{
+.collection-page {
     display: flex;
     flex-direction: column;
 
-    .title{
+    .title {
         font-size: 38px;
         margin: 0 auto 30px;
     }
 
-    .items{
+    .items {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-gap: 10px;
+        gap: 10px;
+        @media screen and (max-width: 800px) {
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+        }
 
-        .collection-item{
+        .collection-item {
             margin-bottom: 30px;
         }
     }
